--- a/tests/configs/spectreRewind.yaml
+++ b/tests/configs/spectreRewind.yaml
@@ -1,3 +1,6 @@
+# spectreRewind.yaml
+
+executor_mode: TSC
 
 # common.yaml
 input_gen_entropy_bits: 24
@@ -18,7 +21,7 @@ instruction_categories:
 - BASE-BINARY
 - BASE-BITBYTE
 - BASE-CMOV
-#- BASE-COND_BR
+- BASE-COND_BR
 - BASE-CONVERT
 - BASE-DATAXFER
 - BASE-FLAGOP
@@ -29,17 +32,15 @@ instruction_categories:
 - BASE-PUSH
 - BASE-SEMAPHORE
 - BASE-SETCC
-# - BASE-STRINGOP
-- BASE-RET
-- BASE-CALL
+- BASE-STRINGOP
 
 # these clauses may be re-assigned later
 contract_observation_clause: loads+stores+pc
 contract_execution_clause:
     - no_speculation
 
-#program_generator_seed: 100
-#input_gen_seed: 100
+program_generator_seed: 100
+input_gen_seed: 100
 
 
 # common-nsco.yaml
@@ -70,8 +71,8 @@ instruction_blocklist_append:
 - repne scasq
 
 
-# v5.yaml
-max_successors_per_bb: 0
-min_successors_per_bb: 0
-min_bb_per_function: 1
-max_bb_per_function: 1
+# v1.yaml
+max_successors_per_bb: 2
+min_successors_per_bb: 2
+min_bb_per_function: 3
+max_bb_per_function: 3
